--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -20,22 +20,31 @@ jobs:
           python-version: '3.12'
 
       - name: Install build dependencies
-        run: sudo apt-get update && sudo apt-get install -y git cmake ninja-build build-essential python3 gcc curl
-
-      - name: Download libqs-python
         run: |
-          curl -L https://github.com/open-quantum-safe/liboqs-python/archive/refs/tags/0.12.0.tar.gz -o liboqs-python.tar.gz
-          mkdir liboqs-python
-          tar -xzf liboqs-python.tar.gz --strip-components=1 -C liboqs-python
+          sudo apt update
 
-      - name: Build and install liboqs and its Python bindings
+          sudo apt install astyle cmake gcc ninja-build libssl-dev python3-pytest python3-pytest-xdist unzip xsltproc doxygen graphviz python3-yaml valgrind
+
+      - name: Download and build liboqs
         run: |
+          git clone --depth=1 https://github.com/open-quantum-safe/liboqs
+          cmake -S liboqs -B liboqs/build -DBUILD_SHARED_LIBS=ON
+          cmake --build liboqs/build --parallel 8
+          cmake --build liboqs/build --target install
+          
+          export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib
+
+      - name: Download and build and liboqs-python
+        run: |
+          git clone --depth=1 https://github.com/open-quantum-safe/liboqs-python
           cd liboqs-python
           pip install .
+          cd ..
+          rm -rf liboqs*
       - name: Install Python dependencies
         run: |
           pip install -r requirements.txt
           pip install pytest
 
       - name: Run tests
-        run: pytest --maxfail=1 --disable-warnings -q
+        run: pytest
