--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,12 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install -r requirements.txt
-          pip install pytest
+          pip install pytest coveralls
 
       - name: Run tests
-        run: PYTHONPATH=. pytest -v
+        run: PYTHONPATH=. pytest --cov=core --cov-report=xml
+
+      - name: Upload to Coveralls
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: coveralls --service=github
