test(core/requests): add test coverage for http requests and proxy patching

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           pip install -r requirements.txt
-          pip install pytest coveralls pytest-cov
+          pip install pytest coveralls pytest-cov pysocks
 
       - name: Run tests
         run: PYTHONPATH=. pytest --cov=core --cov-report=xml
